--- a/cc4/support.css
+++ b/cc4/support.css
@@ -73,10 +73,24 @@ margin-left: 7px;
 }
 #donormap iframe { 
   margin: 0;
-	width:99%;
+	width:84.5%;
 	height: 230px;
+	float: left;
+}
+#donormap #mapinfo {
+  float: left;
+  width: 14.5%;
+  background-color: #262f26;
+  color: #fff;
+  height: 230px;
+  padding: 0 0.5%;
+  font-size: 0.9em;
 }
 
+#donormap #mapinfo h5 {
+  margin-top: 0.5em;
+  font-size: 105%;
+}
 
 #gmaptest p {
 	font-size: 200%;
